# vizia

./: Cargo.toml
crates/vizia_core/: Cargo.toml
crates/vizia_core/src/: model.rs
crates/vizia_core/src/binding/: store.rs
crates/vizia_core/src/context/: backend.rs  mod.rs
crates/vizia_core/src/events/: event_manager.rs
crates/vizia_core/src/systems/: draw.rs  text.rs
crates/vizia_core/src/views/: menu.rs
crates/vizia_style/src/values/: color.rs
crates/vizia_winit/: Cargo.toml
crates/vizia_winit/src/: application.rs  d3d.rs  gl.rs  lib.rs  vulkan.rs  window.rs
