[package]
name = "vizia_winit"
version = "0.1.0"
authors = ["George Atkinson"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vizia/vizia"
description = "Winit backend for vizia"
rust-version = "1.76"

[features]
x11 = ["winit/x11", "glutin/x11", "glutin-winit/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita", "glutin-winit/wayland", "copypasta?/wayland"]
clipboard = ["copypasta"]
accesskit = ["accesskit_winit"]
gl = [
    "skia-safe/gl",
    "dep:glutin",
    "dep:glutin-winit",
    "dep:gl",
    "windows/Win32_Graphics_Dwm"
]
d3d = [
    "skia-safe/d3d",
    "dep:windows"
]
vulkan = [
    "skia-safe/vulkan",
    "dep:vulkano",
]

[dependencies]
vizia_input = { path = "../vizia_input" }
vizia_core = { path = "../vizia_core" }
vizia_id = { path = "../vizia_id" }
vizia_window = { path = "../vizia_window" }

accesskit = "0.12"
winit = { version = "0.30", features = ["rwh_05"] }
skia-safe = "0.75"
copypasta = {version = "0.10", optional = true, default-features = false }
accesskit_winit = { version = "0.18", optional = true }
raw-window-handle = "0.5"
hashbrown = "0.14"
# gl
gl = { version = "0.14.0", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
# d3d
windows = { version = "0.56", optional = true, default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    # "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Wdk_Graphics_Direct3D",
] }
# vulkan
vulkano = { version = "0.34.1", optional = true, default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [ "Win32_Graphics_Dwm" ] }
# windows-sys = { version = "0.59", default-features = false, features = [ "Win32_Graphics_Dwm" ] }

[lints]
workspace = true
